; ModuleID = '/home/carl/AnghaBench/openssl/crypto/ts/extr_ts_conf.c_TS_CONF_set_serial.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/ts/extr_ts_conf.c_TS_CONF_set_serial.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ENV_SERIAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @TS_CONF_set_serial(i32* %0, i8* %1, i32 %2, i32* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32* %3, i32** %8, align 8
  store i32 0, i32* %9, align 4
  %11 = load i32*, i32** %5, align 8
  %12 = load i8*, i8** %6, align 8
  %13 = load i32, i32* @ENV_SERIAL, align 4
  %14 = call i8* @NCONF_get_string(i32* %11, i8* %12, i32 %13)
  store i8* %14, i8** %10, align 8
  %15 = load i8*, i8** %10, align 8
  %16 = icmp ne i8* %15, null
  br i1 %16, label %21, label %17

17:                                               ; preds = %4
  %18 = load i8*, i8** %6, align 8
  %19 = load i32, i32* @ENV_SERIAL, align 4
  %20 = call i32 @ts_CONF_lookup_fail(i8* %18, i32 %19)
  br label %26

21:                                               ; preds = %4
  %22 = load i32*, i32** %8, align 8
  %23 = load i32, i32* %7, align 4
  %24 = load i8*, i8** %10, align 8
  %25 = call i32 @TS_RESP_CTX_set_serial_cb(i32* %22, i32 %23, i8* %24)
  store i32 1, i32* %9, align 4
  br label %26

26:                                               ; preds = %21, %17
  %27 = load i32, i32* %9, align 4
  ret i32 %27
}

declare dso_local i8* @NCONF_get_string(i32*, i8*, i32) #1

declare dso_local i32 @ts_CONF_lookup_fail(i8*, i32) #1

declare dso_local i32 @TS_RESP_CTX_set_serial_cb(i32*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
